--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: eufracioadrian@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My name is Adrian and I am a Front-End Developer. I love creating web products/things. This is a hub for all my creations and and a place where I can share my knowledge.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://adrian.io" # the base hostname & protocol for your site
+url: "http://eufrac.io" # the base hostname & protocol for your site
 twitter_username: adrianeufracio
 github_username:  a0r1an
 
